# hlimgui

./: .gitignore  .gitmodules  README.md  Run.hx  compile.hxml  haxelib.json
extension/: CMakeLists.txt  clipping.cpp  columns.cpp  context.cpp  cursor.cpp  demo.cpp  docking.cpp  dragdrop.cpp  drawlist.cpp  fieldref.cpp  focus.cpp  font.cpp  hlimgui.cpp  id.cpp  imgui_config.h  io.cpp  logging.cpp  node_editor.cpp  parameters_stack.cpp  popup.cpp  style.cpp  tab.cpp  table.cpp  tooltip.cpp  types.h  utilities_clipboard.cpp  utilities_color.cpp  utilities_ini.cpp  utilities_keyboard.cpp  utilities_misc.cpp  utilities_mouse.cpp  utilities_text.cpp  utils.cpp  utils.h  viewport.cpp  widgets_combo.cpp  widgets_drag.cpp  widgets_input.cpp  widgets_listbox.cpp  widgets_main.cpp  (+13 more)
extension/addons/markdown/: markdown.cpp
extension/addons/neo_sequencer/: neo_sequencer.cpp
extension/addons/node_editor/: node_editor.cpp
extension/imgui/: imconfig.h  imgui_draw.cpp
extension/lib/markdown/: imgui_markdown.h
extension/lib/neo_sequencer/: imgui_neo_internal.cpp  imgui_neo_sequencer.cpp  imgui_neo_sequencer.h
imgui/: FieldRef.hx  ImGui.hx  ImGuiApp.hx  ImGuiDrawable.hx  ImGuiMacro.hx  ImGuiUtils.hx  Markdown.hx  NeoSequencer.hx  NodeEditor.hx  _ImGuiInternalMacro.hx
imgui/types/: ImDrawList.hx  ImFont.hx  ImFontAtlas.hx  ImGuiClipper.hx  ImGuiDockNode.hx  ImGuiListClipper.hx  ImVector.hx  Pointers.hx  Renderer.hx
src/: Main.hx
